# AlgoKruskalPrim

./: CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  Kruskal.cpp  Kruskal.h  MinHeap.h  Pair.h  Prim.cpp  Prim.h  Vert.h  disjointSets.cpp  disjointSets.h  edgeList.h  main.cpp
Backup/: QuickSort.h  UnionFind.cpp  edgeList.h
Graph/: Edge.h  Graph.cpp  Graph.h  Vert.h
Kruskal/: Kruskal.cpp  Kruskal.h  QuickSort.cpp  QuickSort.h  UnionFind.cpp  UnionFind.h
Prim/: Heap.cpp  Heap.h  MinHeap.cpp  MinHeap.h  Pair.cpp  Pair.h  Prim.cpp  Prim.h
